--- a/views/partials/footer_small.html
+++ b/views/partials/footer_small.html
@@ -10,10 +10,7 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="/getting-started">Getting Started</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="/cpu-mineable-coins">CPU Mineable Coins</a>
+            <a href="https://www.hostero.eu" target="_blank">Hostero</a>
           </li>
         </ul>
       </div>
@@ -34,8 +31,7 @@
     <div class="row">
       <div class="col">
         <center>
-        <small>Hostero is a coin mining, monitoring, and stats service. Hostero does not research or recommend any coin. Do your own research and invest at your own risk.<br /><br />&copy; 2019 Hostero All Rights Reserved.
-        </small>
+        <small>&copy; 2019 Hostero All Rights Reserved.</small>
         </center>
       </div>
       <!--end of col-->
