--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,9 +1,9 @@
 <div class="nav-container">
-  <div class="bg-dark navbar-dark" data-sticky="top">
+  <div class="bg-white navbar-light" data-sticky="top">
     <div class="container">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="/">
-          <img alt="Hostero Logo" src="/assets/img/hostero_logo_white_small.png" height="40" />
+          <img alt="Hostero Logo" src="/assets/img/hostero_logo_black_small.png" height="40" />
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,10 +14,6 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a href="/" class="nav-link">Overview</a>
-            </li>
-
-            <li class="nav-item">
-              <a href="/pricing" class="nav-link">Pricing</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -54,11 +50,8 @@
           </ul>
 
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="/changelog" class="nav-link">Changelog <span class="badge badge-secondary mr-2">v1</span></a>
-            </li>
             <li class="nav-item d-flex align-items-center">
-              <a href="http://dashboard.hostero.eu" class="btn btn-success">Log In</a>
+              <a href="https://www.hostero.eu" class="btn btn-success">Mine POW</a>
             </li>
           </ul>
         </div>
