--- a/views/index.html
+++ b/views/index.html
@@ -12,12 +12,12 @@
     <section class="bg-white space-xlg">
       <div class="container">
         <div class="row align-items-center justify-content-around">
-          <div class="col-12 col-md-6 col-lg-5 text-center text-md-left">
-            <h1 class="display-3">WebDollar Fund</h1>
-            <h2 class="lead">Start staking $WEBD easy and convenient.</h2>
+          <div class="col-12 col-md-9 col-lg-5 text-center text-md-left">
+            <h1 class="display-3">WebDollar.Fund</h1>
+            <h2 class="lead">The first WebDollar fund that allows your to stake your WEBD without having to be online 24/7.<br /><br />Start staking WEBD easy and convenient.</h2>
           </div>
           <!--end of col-->
-          <div class="col-md-6">
+          <div class="col-md-3">
             <img alt="Piggy" src="/assets/img/money-pig.svg" class="box-shadow img-fluid" />
           </div>
           <!--end of col-->
@@ -43,67 +43,67 @@
             <div class="accordion" id="accordion-1" data-children=".accordion-item">
               <div class="accordion-item">
                 <a data-toggle="collapse" data-parent="#accordion-1" href="#accordion-panel-1" aria-expanded="true" aria-controls="accordion-1">
-                  <h5>How to install</h5>
+                  <h5>How to Stake?</h5>
                   <i class="h5 icon-chevron-small-right"></i>
                 </a>
                 <div id="accordion-panel-1" class="collapse show" role="tabpanel">
                   <p>
-                    Installing Hostero only takes about 5 minutes. Follow the <a href="getting-started">Getting Started</a> guide.
+                    Make a transaction from your address to the WebDollar.fund address listed above. That's it.
                   </p>
                 </div>
               </div>
               <div class="accordion-item">
                 <a data-toggle="collapse" data-parent="#accordion-1" href="#accordion-panel-2" aria-expanded="false" aria-controls="accordion-1">
-                  <h5>Do we provide hardware for mining?</h5>
+                  <h5>Do I need to keep my PC open?</h5>
                   <i class="h5 icon-chevron-small-right"></i>
                 </a>
                 <div id="accordion-panel-2" class="collapse" role="tabpanel">
                   <p>
-                    No. We only provide the software to run on your mining nodes.
+                    No. We are keeping a secured server online 24/7, so you don't have to worry about uptime and security.
                   </p>
                 </div>
               </div>
               <div class="accordion-item">
                 <a data-toggle="collapse" data-parent="#accordion-2" href="#accordion-panel-3" aria-expanded="false" aria-controls="accordion-2">
-                  <h5>How much does the service cost?</h5>
+                  <h5>How much can I stake?</h5>
                   <i class="h5 icon-chevron-small-right"></i>
                 </a>
                 <div id="accordion-panel-3" class="collapse" role="tabpanel">
                   <p>
-                    Check out the <a href="/pricing">pricing</a> section. Hostero is free for running one miner, for ever.
+                    There is no amount limit at the moment.
                   </p>
                 </div>
               </div>
               <div class="accordion-item">
                 <a data-toggle="collapse" data-parent="#accordion-3" href="#accordion-panel-4" aria-expanded="false" aria-controls="accordion-3">
-                  <h5>How can Hostero help?</h5>
+                  <h5>Can I withdraw my WEBD at any time?</h5>
                   <i class="h5 icon-chevron-small-right"></i>
                 </a>
                 <div id="accordion-panel-4" class="collapse" role="tabpanel">
                   <p>
-                    Big and small miners benefit from a central hub where they can control all their mining nodes. Hostero also abstracts the installing and compiling mining software on your servers.
+                    Yes. You can withdraw your amount whenever you want. The process of withdrawing is almost instant and is being handled automatically.
                   </p>
                 </div>
               </div>
               <div class="accordion-item">
                 <a data-toggle="collapse" data-parent="#accordion-4" href="#accordion-panel-5" aria-expanded="false" aria-controls="accordion-4">
-                  <h5>Are GPU miners supported?</h5>
+                  <h5>How can I see how much I earn?</h5>
                   <i class="h5 icon-chevron-small-right"></i>
                 </a>
                 <div id="accordion-panel-5" class="collapse" role="tabpanel">
                   <p>
-                    No. You can only run CPU miners at the moment.
+                    Everything is open and stored on the blockchain. You can check <a href="https://www.webdscan.io" target="_blank">WebdScan.io</a> to make sure payments are done correctly.
                   </p>
                 </div>
               </div>
               <div class="accordion-item">
                 <a data-toggle="collapse" data-parent="#accordion-5" href="#accordion-panel-6" aria-expanded="false" aria-controls="accordion-5">
-                  <h5>How performant is the Hostero miner?</h5>
+                  <h5>Can I trust WebDollar.Fund?</h5>
                   <i class="h5 icon-chevron-small-right"></i>
                 </a>
                 <div id="accordion-panel-6" class="collapse" role="tabpanel">
                   <p>
-                    There is no performance change from mining with Hostero instead of the official miner.
+                    WebDollar.fund is part of Hostero. We are collaborators of WebDollar since the mainnet was released. We are actively contributing to the community and believe in the project, long-term.
                   </p>
                 </div>
               </div>
