--- a/views/partials/footer_small.html
+++ b/views/partials/footer_small.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col">
         <center>
-        <small>&copy; 2019 Hostero All Rights Reserved.</small>
+        <small>WebDollar.Fund is a Hostero enterprise.<br /><br />&copy; 2019 Hostero All Rights Reserved. </small>
         </center>
       </div>
       <!--end of col-->
