--- a/views/index.html
+++ b/views/index.html
@@ -13,8 +13,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-around">
           <div class="col-12 col-md-9 col-lg-5 text-center text-md-left">
-            <h1 class="display-3">WebDollar.Fund</h1>
-            <h2 class="lead">The first WebDollar fund that allows your to stake your WEBD without having to be online 24/7.<br /><br />Start staking WEBD easy and convenient.</h2>
+            <h1 class="display-3">WebDollar Fund</h1>
+            <h2 class="lead">The first WebDollar fund that allows your to stake your WEBD without having to be online 24/7.<br /><br />Start staking your WEBD, easy and convenient.</h2>
           </div>
           <div class="col-md-3">
             <img alt="Piggy" src="/assets/img/money-pig.svg" class="box-shadow img-fluid" />
