--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -20,7 +20,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown">Tools</a>
               <div class="dropdown-menu" aria-labelledby="pagesDropdown">
 
-                <a class="dropdown-item" href="/cpu-mineable-coins">
+                <a class="dropdown-item" href="https://www.hostero.eu/cpu-mineable-coins" target="_blank">
                     <span class="h6 mb-0">CPU Mineable Coins</span>
                     <p class="text-small text-muted">Directory with CPU mineable cryptocurrencies</p>
                 </a>
